--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,7 @@ name: SwtdrRoleplay
 main: fr.brangers.swtdrrp.Main
 version: 1.0
 api-version: 1.16
+commands:
+  test:
+    description: Your description
+    usage: /<command>
